tests/ui/wchz_nul_end.stderr
error: C-style string cannot contain nul characters
 --> $DIR/wchz_nul_end.rs:3:35
  |
3 | const NUL_END: &[wchar_t] = wchz!("nul byte end\0");
  |                                   ^^^^^^^^^^^^^^^^
